change in responsive design

--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ body {
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+@media (max-width: 576px) {
+  .container {
+    max-width: 95%;
+  }
+}
 .container h2 {
   margin-bottom: 10px;
   color: #00003d;
